# debris

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
debris/: CMakeLists.txt  color.cpp  color.h  debris.cpp  debris.h  element.cpp  element.h  math.hpp  render.cpp  render.h  renderers.h  window.cpp  window.h
debris/native/: CMakeLists.txt
debris/native/win32/: CMakeLists.txt  window.cpp  window.h
debris/render/: CMakeLists.txt  dx11.h
debris/render/win32/: CMakeLists.txt  dx11.cpp
example/: CMakeLists.txt
example/test/: CMakeLists.txt  main.cpp  main.xml
schemas/: debrisui.xsd
shader/element/: element.fsh  element.vsh
